--- a/faq.qmd
+++ b/faq.qmd
@@ -31,7 +31,7 @@ There are many reasons why you might want to use a programming language for data
 
 - **Reproducibility**: With a programming language you can document your analysis in a script that can be reproduced by others. This is not possible with a point-and-click interface of a GUI application or a spreadsheet. [Excel error](https://www.marketplace.org/2013/04/17/economy/excel-mistake-heard-round-world/) due to miss-clicking are well known.
 - **Separation of data and analysis**: In a spreadsheet your data and your analysis are done in the same place. This can make it easy to unknowingly introduce errors into your data. With a programming language all analysis is done on a copy of the data, making it easier to ensure the data is correct. This also has the benefit that you can can make mistakes in your data analysis with a programming language without consequence. If you run into problems, get an error, or mess something up, it is ok. Your data remains safe and sound just as you left it.
-**You are in charge**: Spreadsheets often try to guess the formatting of data, which is another source of errors. Such errors are common, especially in dealing with dates. Scientists even had to [rename a gene](https://www.theverge.com/2020/8/6/21355674/human-genes-rename-microsoft-excel-misreading-dates) to deal with the issue. For historians, the fact that Excel does not natively support dates before 1900. With a programming language you have much greater control.
+- **You are in charge**: Spreadsheets often try to guess the formatting of data, which is another source of errors. Such errors are common, especially in dealing with dates. Scientists even had to [rename a gene](https://www.theverge.com/2020/8/6/21355674/human-genes-rename-microsoft-excel-misreading-dates) to deal with the issue. For historians, the fact that Excel does not natively support dates before 1900. With a programming language you have much greater control.
 
 ## Why are we learning R in this course? Why not Python? {#sec-python}
 In this course we will learn [R](https://www.r-project.org) for data analysis and visualization. A reasonable question to ask is why R and why not [Python](https://www.python.org). To begin with, I think it is fair to say that R and Python are both good choices for doing Digital Humanities. I should also say that the main reasons we are learning R in this course is that I am more comfortable with R than with Python. But there are a couple of reasons that I think R is a good choice for Digital Humanities.
@@ -44,7 +44,7 @@ In this course we will learn [R](https://www.r-project.org) for data analysis an
 The [tidyverse](https://www.tidyverse.org) is a set of R packages that were originally designed by [Hadley Wickham](https://hadley.nz) that provide a (relatively) consistent interface for data analysis. They provide a different ways of analyzing data from what is known as [base R](https://dplyr.tidyverse.org/articles/base.html). However, the popularity of the tidyverse means there is little drawback to learning it before or in the place of base R. Most materials for learning R use the tidyverse and the packages continue to be maintained and updated.
 
 ## Why are we using Quarto with R and to make websites? {#sec-quarto}
-[Quarto](https://quarto.org) is a relatively new platform made by [Posit](https://posit.co), the company that makes the [RStudio IDE](https://posit.co/downloads/). It is a replacement for [RMarkdown](https://rmarkdown.rstudio.com). Two advantages of Quarto over RMarkdown are that Quarto can be used by more than just R and it provides a more consistent interface for writing a wide variety of outputs including R scripts, journal articles, slides, websites, and books. Quarto is well integrated into RStudio and familiarity with Quarto documents from the beginning of the course should lessen the cognative load for making a website at the end of the course.
+[Quarto](https://quarto.org) is a relatively new platform made by [Posit](https://posit.co), the company that makes the [RStudio IDE](https://posit.co/downloads/). It is a replacement for [RMarkdown](https://rmarkdown.rstudio.com). Two advantages of Quarto over RMarkdown are that Quarto can be used by more than just R and it provides a more consistent interface for writing a wide variety of outputs including R scripts, journal articles, slides, websites, and books. Quarto is well integrated into RStudio and familiarity with Quarto documents from the beginning of the course should lessen the cognitive load for making a website at the end of the course.
 
 ## Why should I make a website? {#sec-web}
 The simple answer is that it is a good idea to have your own place on the internet that you are in control of. The demise of the app formerly known as Twitter in 2022 and 2023 makes this even more plain. It is useful to have a personal website that you can point people towards and that you can use as a showcase for you work. Or it can just be a place for you to do what you want. Using open source technology and publishing to the open web puts you in control. You can be a part of [making the internet weird again](https://www.rollingstone.com/culture/culture-commentary/internet-future-about-to-get-weird-1234938403/).
