--- a/computing.qmd
+++ b/computing.qmd
@@ -31,12 +31,13 @@ Via [Homebrew](https://brew.sh):
 
 1. `brew install git` – download git with Homebrew
 2. Quit terminal and reopen it to start new session
-3. `‌git --version` – check to see that installation worked.
+3. `git --version` – check to see that installation worked.
 
 Via Xcode command line tools:
 
 1. `xcode-select --install`
-2. 
+2. Quit terminal and reopen it to start new session
+3. `git --version` – check to see that installation worked.
 
 ### Windows
 Install git with [Git Bash](https://gitforwindows.org).
