--- a/meetings/09-git.qmd
+++ b/meetings/09-git.qmd
@@ -12,11 +12,11 @@ title: "Week 9: Version control with Git and GitHub"
 ## Assignment
 - Make sure that you have Git downloaded on your computer.
 - Set up Git to work with RStudio.
-- Set up and account at GitHub.
+- Set up and account at [GitHub](https://github.com).
 - Take some time to go back over working on the command line.
 
 ## Activities
-- Workshop: Git
+- Workshop: Git and GitHub
 - Workshop: Git and RStudio
 
 ## Resources
@@ -30,8 +30,8 @@ title: "Week 9: Version control with Git and GitHub"
 - [Git Command Line cheatsheet](https://github.com/WebDevStudios/CLI-Cheat-Sheet/blob/master/git-commands.md)
 
 ### RStudio and Git
-- Jenny Bryan, [Happy Git and GitHub for the useR](http://happygitwithr.com)
-- [usethis: Managing Git(Hub) Credentials](https://usethis.r-lib.org/articles/git-credentials.html)
+- Jenny Bryan, [Happy Git and GitHub for the useR](http://happygitwithr.com).
+- [usethis: Managing Git(Hub) Credentials](https://usethis.r-lib.org/articles/git-credentials.html).
 - Julie Lowndes and Allison Horst, [R for Excel Users: GitHub](https://rstudio-conf-2020.github.io/r-for-excel/github.html).
-- [Maëlle Salmon, git and GitHub in R for the casual user](https://masalmon.eu/2023/01/12/git-github-casual/)
-- Garrick Aden-Buie, [Pull Request Flow with usethis](https://www.garrickadenbuie.com/blog/pull-request-flow-usethis)
+- Maëlle Salmon, [git and GitHub in R for the casual user](https://masalmon.eu/2023/01/12/git-github-casual/).
+- Garrick Aden-Buie, [Pull Request Flow with usethis](https://www.garrickadenbuie.com/blog/pull-request-flow-usethis).
