--- a/meetings/14-design.qmd
+++ b/meetings/14-design.qmd
@@ -7,6 +7,7 @@ This week is a more or less free week to discuss and work on anything from the c
 
 ## Reading
 - [Quarto documentation: HTML Themes](https://quarto.org/docs/output-formats/html-themes.html)
+  - [More About Quarto Themes](https://quarto.org/docs/output-formats/html-themes-more.html)
 - Samantha Csik, [Customizing Quarto Websites - Make your website stand out using SASS & CSS](https://ucsb-meds.github.io/customizing-quarto-websites/)
   - [GitHub repository](https://github.com/UCSB-MEDS/customizing-quarto-websites)
 
