--- a/resources.qmd
+++ b/resources.qmd
@@ -5,7 +5,7 @@ title: "Resources"
 This page provides a number of general resources for the main technologies we will be using in the course. More specific resources about the weekly topics are listed on the page for those weeks.
 
 ## Digital Humanities {#sec-dh}
-[Humanities Commons - Hcommons](https://hcommons.org) is doing a lot of interesting things to build open source infrastructure for the Humanities in general. Their blog, called [Platypus](https://team.hcommons.org) discusses the why and how of what they are doing.
+[Humanities Commons - Hcommons](https://hcommons.org) is doing a lot of interesting things to build open source infrastructure for the Humanities in general. Their blog, called [Platypus](https://team.hcommons.org), discusses the why and how of what they are doing.
 
 The question of what is Digital Humanities is ever present. In fact, there is a [website](http://whatisdigitalhumanities.com) that automatically provides different answers. Digital Humanities is also perpetually seen as the future as [Cameron Blevins](http://dhdebates.gc.cuny.edu/debates/text/77) noted in 2016. [The Digital Humanities Literacy Guidebook](https://cmu-lib.github.io/dhlg/) provides a good overview of the breadth of Digital Humanities.
 
@@ -18,10 +18,23 @@ Writing on or about Digital Humanities is quite widespread and diverse. Here are
 As far as tutorials for digital tools and technologies, two good places to start looking are [The Carpentries](https://carpentries.org) and [Programming Historian](https://programminghistorian.org).
 
 There are many lists of Digital Humanities and Digital History tools, projects, tutorials, and data sources. Here are a couple **Awesome** lists:  
+
 - [Awesome Digital Humanities](https://dh-tech.github.io/awesome-digital-humanities/)
 - [Awesome Digital History](https://github.com/maehr/awesome-digital-history)
 - [Awesome Research Tools](https://github.com/emptymalei/awesome-research)
 - [Awesome Reproducible Research](https://github.com/leipzig/awesome-reproducible-research)
+
+An invaluable source for finding Digital Humanities projects is the online journal [Reviews in Digital Humanities](https://reviewsindh.pubpub.org). I recommend looking through the [reviews by topic or method](https://reviewsindh.pubpub.org/project-registry-topic-method), which includes a quite large collection of DH projects devoted to [Public Humanities](https://reviewsindh.pubpub.org/public-humanities).
+
+## Discord {#sec-discord}
+[Discord](https://discord.com) is a community chat app. Unlike most tools that we are using in this course, it is not open-source, but the free tier of Discord serves our needs well of providing a place to discuss topics outside of our meetings. Discord is available for [download](https://discord.com/download) on desktop and mobile or can be used in the browser. We will go through using Discord together, but you can look at the docs on [getting started](https://support.discord.com/hc/en-us/articles/360033931551-Getting-Started) or at the [beginner's guide](https://support.discord.com/hc/en-us/articles/360045138571-Beginner-s-Guide-to-Discord) if you are confused about anything. You will receive an invite for the Discord via email.
+
+## Zotero {#sec-zotero}
+[Zoetero](https://www.zotero.org) is an open-source application available on macOS, Windows, Linux, and iOS that is created by the [Corporation for Digital Scholarship](https://digitalscholar.org). It is built by a group of historians and designed specifically for use by academics in the Humanities. In this course we will be using [Zotero groups](https://www.zotero.org/groups) as a way to collaborate on the collection of resources for the course.
+
+You can download Zotero [here](https://www.zotero.org/download/). To use Groups you need to [sign up for an account](https://www.zotero.org/user/register). I will send you a link to join our group, vt5454-s24, once everyone has an account.
+
+We will discuss using Zotero in more detail in [Week 3](meetings/03-organization.qmd). You can get a start with Zotero if you have not used it before by looking at the [documentation](https://www.zotero.org/support/).
 
 ## Text editors {#sec-text-editors}
 We will be working in plain text documents throughout the course and a good text editor is essential. Happily, there are many options for you. Below is a partial list of text editors, but there are many out there.
