--- a/index.qmd
+++ b/index.qmd
@@ -1,39 +1,33 @@
 ---
-title: "History 5454: Digital Humanities for Public History"
+title: "History 5454: Digital History for Public History"
 ---
 
 #### Spring 2024
 
-::: columns
-::: {.column width="50%"}
 ::: {.callout-note appearance="minimal"}
 ## Instructor
 [Jesse Sadler](https://www.jessesadler.com). Email: <jrsadler@vt.edu>  
-Office hours: Thursday, 1:00--2:00pm and by appointment
-:::
+Office hours: Thursday, 1:00--2:00pm and by appointment in Major Williams 4th floor
 :::
 
-::: {.column width="50%"}
 ::: {.callout-note appearance="minimal"}
 ## Course
 History 5454: Spring 2024  
 Meets Thursdays, 2:00–4:50 in Major Williams 427
 :::
-:::
-:::
 
 ## Course description
-This course is designed to introduce students to some of the tools of Digital Humanities/History with an emphasis on using open source technology that puts you in control. The course focuses on methodologies. It begins with the basics of organizing primary and secondary sources and your notes on them, to an introduction to data analysis and visualization using the R programming language, culminating in the creation of your own website. Along the way we will be learning the basics of using the command line and learn about git and using GitHub for publishing websites and to become acquainted with the practices of reproducible research.
+This course is designed to introduce students to some of the tools of Digital Humanities/History with an emphasis on using open source technology that puts you in control. The course focuses on methodologies. It begins with the basics of organizing primary and secondary sources and your notes on them. We will then give an introduction to data analysis and visualization using the R programming language, culminating in the creation of your own website. Along the way we will be learning the basics of using the command line and learn about git and using GitHub for publishing websites and to become acquainted with the practices of reproducible research.
 
 ::: {.callout-warning icon=false}
 ## Note
-This course website will function as the main source of information for the course. The syllabus is liable to change based on new material and student input. We may not get to certain material or I may add new resources based on student interest. Make sure to check in on the website frequently.
+This course website will function as the main source of information for the course. The syllabus is liable to change based on new material and student input. We may not get to certain material, or I may add new resources based on student interest. Make sure to check in on the website frequently.
 :::
 
 ## Learning goals
 After taking this course, you will...
 
-- have expanded awareness of the open source tools available for conducting historical research and making that research widely available to the public.
+- have an expanded awareness of the open source tools available for conducting historical research and making that research widely available to the public.
 - be comfortable writing in plain text and using Markdown.
 - understand the uses and drawbacks of spreadsheets and how to organize rectangular data.
 - be comfortable with the basics of the command line.
@@ -63,7 +57,9 @@ As noted above, the primary expectation for the course is a willingness to try, 
 - Final project: 40%
 
 ## How the course works
-Meetings will be divided between discussion of weekly readings and topics and interactive "labs" devoted to the tools and technologies for that week. All information necessary for the course is made available through this website. Information about weekly reading, assignments, and resources is available via the sidebar. This information is dynamic and liable to change, so please make sure to visit this website frequently.
+Meetings will be divided between discussion of weekly readings and topics and interactive workshops devoted to the tools and technologies for that week. All information necessary for the course is made available through this website. Information about weekly reading, assignments, and resources is available via the sidebar. This information is dynamic and liable to change, so please make sure to visit this website frequently.
+
+We will be using two pieces of technology to help with collaboration during the semester. We will use [Discord](https://discord.com) to provide a place to ask questions and receive feedback outside of the seminars. The Discord will also be a place for any announcements about the course. See [Resources: Discord](resources.qmd#sec-discord) for instructions on getting set up with Discord. Secondly, we will be using [Zotero groups](https://www.zotero.org/groups/) as a way to collaboratively keep track of the resources we use for the class. See [Resources: Zoetero](resources.qmd#sec-zotero) for instructions on getting set up with Zotero.
 
 ::: {.callout-tip icon=false}
 ## Note
